[package]
edition = "2021"
name = "preimage-stealer"
version = "0.1.0"

[dependencies]
tonic_openssl_lnd = "0.2.0"
tokio = "1"
tokio-stream = "0.1.11"
hex = "0.4"
home = "0.5.4"
clap = { version = "4.0.24", features = ["derive"] }
sha2 = "0.10.6"
sled = { version = "0.34" }
redis = { version = "0.22.1", features = ["tokio-comp"] }
axum = "0.5.17"
dioxus = { version = "0.2.4", features = ["ssr"] }